--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
     "angular-animate": "^1.3.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "underscore": "~1.8.3",
+    "angular-chart.js": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
